Add error message reporting via toasts
We need to give feedback to the user whenever something went wrong; in
this specific case, we use a toast to communicate that loading a file
did not succeed.

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -11,6 +11,10 @@
           <object class="DragOverlay" id="drag_overlay">
             <property name="title" translatable="yes">Drop a song to add it to the queue</property>
             <property name="child">
+
+              <object class="AdwToastOverlay" id="toast_overlay">
+                <property name="child">
+
               <object class="GtkStack" id="main_stack">
                 <child>
                   <object class="GtkStackPage">
@@ -121,6 +125,9 @@
                     </property>
                   </object>
                 </child>
+              </object>
+
+                </property>
               </object>
             </property>
           </object>
