Set a maximum content width for the playlist
The important part of the UI are the song details and the media playback
controls; the playlist does not need to expand that much.

Fixes: #93

--- a/src/gtk/playlist-view.ui
+++ b/src/gtk/playlist-view.ui
@@ -75,6 +75,7 @@
             <property name="vscrollbar-policy">automatic</property>
             <property name="propagate-natural-height">true</property>
             <property name="propagate-natural-width">true</property>
+            <property name="max-content-width">400</property>
             <property name="vexpand">true</property>
             <property name="child">
               <object class="GtkListView" id="queue_view">
