--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -32,8 +32,8 @@ picture.cover {
   margin: 6px;
 }
 
-.main-window picture.cover {
-  background: linear-gradient(to bottom, @background_color_1, @background_color_2);
+.main-window songdetails picture.cover {
+  background: linear-gradient(to bottom, @background_color_0, @background_color_1);
 }
 
 waveformview {
@@ -98,11 +98,10 @@ scrolledwindow undershoot.top {
   box-shadow: inset 0 1px @borders;
 }
 
-window.main-window {
-  background: linear-gradient(127deg, alpha(@background_color_1, 0.70), @background_color_1 70.1%),
-              linear-gradient(217deg, alpha(@background_color_3, 0.70), @background_color_3 70.1%),
-              /* background_color_2 is used to determine foreground_color */
-              linear-gradient(336deg, alpha(@background_color_2, 0.70), @background_color_2 70.1%);
+.main-window {
+  background: linear-gradient(127deg, alpha(@background_color_0, .8), alpha(@background_color_0, 0) 70.71%),
+              linear-gradient(217deg, alpha(@background_color_1, .8), alpha(@background_color_1, 0) 70.71%),
+              linear-gradient(336deg, alpha(@background_color_2, .8), alpha(@background_color_2, 0) 70.71%);
   color: @foreground_color;
   transition-property: background, color;
   transition-duration: 250ms;
@@ -113,9 +112,9 @@ window.main-window {
  * is folded, as the flap background is transparent
  */
 .main-window .folded .playlist-background {
-  background: linear-gradient(127deg, alpha(@background_color_1, 0.70), @background_color_1 70.1%),
-              linear-gradient(217deg, alpha(@background_color_3, 0.70), @background_color_3 70.1%),
-              linear-gradient(336deg, alpha(@background_color_2, 0.70), @background_color_2 70.1%);
+  background: linear-gradient(127deg, alpha(@background_color_0, .8), alpha(@background_color_0, 0) 70.71%),
+              linear-gradient(217deg, alpha(@background_color_1, .8), alpha(@background_color_1, 0) 70.71%),
+              linear-gradient(336deg, alpha(@background_color_2, .8), alpha(@background_color_2, 0) 70.71%);
   color: @foreground_color;
 }
 
@@ -136,7 +135,7 @@ window.main-window {
 
 .main-window popover arrow,
 .main-window popover contents {
-  background-color: shade(@background_color_1, 1.2);
+  background-color: shade(@background_color_0, 1.2);
   color: @foreground_color;
 }
 
