Set CSS classes for cover art in the playlist
The cover art in the playlist rows cannot use the background colors, as
they apply only to the currently playing song. We should use the same
classes we use for the "no cover" fallback.

--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -34,6 +34,9 @@
                             <property name="cover-size">1</property>
                             <property name="halign">center</property>
                             <property name="valign">center</property>
+                            <style>
+                              <class name="card"/>
+                            </style>
                           </object>
                         </property>
                       </object>
