--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -54,8 +54,8 @@ queuerow .currently-playing {
 }
 
 queuerow box.song-details {
-  padding: 6px;
-  border-spacing: 21px;
+  padding: 6px 0;
+  border-spacing: 12px;
 }
 
 queuerow label.song-title {
