Add missing space in the playlist heading
The removal of the spacing in 38889b51599a9f5b364a885b0a9ddd461d51bf34
fixed the issue with the action bar, but introduced a regression.

--- a/src/gtk/playlist-view.ui
+++ b/src/gtk/playlist-view.ui
@@ -12,6 +12,7 @@
                 <property name="orientation">vertical</property>
                 <property name="spacing">2</property>
                 <property name="margin-start">6</property>
+                <property name="margin-bottom">6</property>
                 <property name="hexpand">true</property>
                 <child>
                   <object class="GtkLabel">
