--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -107,31 +107,12 @@ scrolledwindow undershoot.top {
   transition-timing-function: ease;
 }
 
-/* Apply the main window background to the playlist flap, if the main content
- * is folded, as the flap background is transparent
- */
-.main-window .folded .playlist-background {
-  background: linear-gradient(127deg, alpha(@background_color_0, .55), alpha(@background_color_0, 0) 70.71%),
-              linear-gradient(217deg, alpha(@background_color_1, .55), alpha(@background_color_1, 0) 70.71%),
-              linear-gradient(336deg, alpha(@background_color_2, .55), alpha(@background_color_2, 0) 70.71%);
-}
-
 .main-window .unfolded .darken {
   background-color: rgba(0, 0, 0, 0.08);
 }
 
-/* Reset the background of the playlist flap if there's no cover art */
-:not(.main-window) .playlist-background {
+.main-window .folded playlistview {
   background: @window_bg_color;
-}
-
-:not(.main-window) .unfolded .darken {
-  background-color: rgba(0, 0, 0, 0.08);
-}
-
-.main-window popover arrow,
-.main-window popover contents {
-  background-color: shade(@background_color_0, 1.2);
 }
 
 .main-window button:focus,
