--- a/src/gtk/playlist-view.ui
+++ b/src/gtk/playlist-view.ui
@@ -92,10 +92,9 @@
           <object class="GtkActionBar" id="queue_actionbar">
             <property name="revealed">false</property>
             <child>
-              <object class="GtkButton" id="queue_clear_button">
-                <property name="icon-name">edit-clear-all-symbolic</property>
-                <property name="action-name">queue.clear</property>
-                <property name="tooltip-text" translatable="yes">Remove all songs</property>
+              <object class="GtkButton" id="queue_select_all_button">
+                <property name="icon-name">edit-select-all-symbolic</property>
+                <property name="tooltip-text" translatable="yes">Select all songs</property>
               </object>
             </child>
             <child type="center">
