--- a/src/gtk/playlist-view.ui
+++ b/src/gtk/playlist-view.ui
@@ -75,6 +75,7 @@
             <property name="vscrollbar-policy">automatic</property>
             <property name="propagate-natural-height">true</property>
             <property name="propagate-natural-width">true</property>
+            <property name="min-content-width">300</property>
             <property name="max-content-width">400</property>
             <property name="vexpand">true</property>
             <property name="child">
