--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -52,6 +52,7 @@
                     <child>
                       <object class="GtkLabel" id="song_title_label">
                         <property name="xalign">0</property>
+                        <property name="width-chars">25</property>
                         <property name="max-width-chars">35</property>
                         <property name="ellipsize">end</property>
                         <style>
@@ -62,6 +63,7 @@
                     <child>
                       <object class="GtkLabel" id="song_artist_label">
                         <property name="xalign">0</property>
+                        <property name="width-chars">25</property>
                         <property name="max-width-chars">35</property>
                         <property name="ellipsize">end</property>
                         <style>
