Move enable-recoloring action to the window
We want to control it from within the type.

--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -194,7 +194,7 @@
     <section>
       <item>
         <attribute name="label" translatable="yes">_Match Cover Art</attribute>
-        <attribute name="action">app.enable-recoloring</attribute>
+        <attribute name="action">win.enable-recoloring</attribute>
       </item>
     </section>
     <section>
