Add a "copy song details to clipboard" action
It's useful for sharing the song we're currently playing. We can tweak
the copied string later on.

--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -179,6 +179,12 @@
   <menu id="primary_menu">
     <section>
       <item>
+        <attribute name="label" translatable="yes">Copy</attribute>
+        <attribute name="action">win.copy</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
         <attribute name="label" translatable="yes">Add _Song</attribute>
         <attribute name="action">queue.add-song</attribute>
       </item>
