--- a/src/gtk/playlist-view.ui
+++ b/src/gtk/playlist-view.ui
@@ -69,22 +69,36 @@
           </object>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
-            <property name="hscrollbar-policy">never</property>
-            <property name="vscrollbar-policy">automatic</property>
-            <property name="propagate-natural-height">true</property>
-            <property name="min-content-width">300</property>
-            <property name="max-content-width">400</property>
-            <property name="vexpand">true</property>
-            <property name="child">
-              <object class="GtkListView" id="queue_view">
-                <property name="single-click-activate">true</property>
-                <property name="hexpand">false</property>
+          <object class="GtkOverlay" id="playlist_overlay">
+            <child type="overlay">
+              <object class="GtkProgressBar" id="playlist_progress">
+                <property name="valign">start</property>
+                <property name="hexpand">true</property>
+                <property name="visible">false</property>
                 <style>
-                  <class name="navigation-sidebar"/>
+                  <class name="osd"/>
                 </style>
               </object>
-            </property>
+            </child>
+            <child>
+              <object class="GtkScrolledWindow">
+                <property name="hscrollbar-policy">never</property>
+                <property name="vscrollbar-policy">automatic</property>
+                <property name="propagate-natural-height">true</property>
+                <property name="min-content-width">300</property>
+                <property name="max-content-width">400</property>
+                <property name="vexpand">true</property>
+                <property name="child">
+                  <object class="GtkListView" id="queue_view">
+                    <property name="single-click-activate">true</property>
+                    <property name="hexpand">false</property>
+                    <style>
+                      <class name="navigation-sidebar"/>
+                    </style>
+                  </object>
+                </property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
