--- a/src/gtk/playlist-view.ui
+++ b/src/gtk/playlist-view.ui
@@ -12,6 +12,7 @@
                 <property name="orientation">vertical</property>
                 <property name="spacing">2</property>
                 <property name="hexpand">true</property>
+                <property name="width-request">250</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="xalign">0</property>
