Fix .darken class selector
We want to apply the "darken" class regardless of whether the recoloring
is happening or not.

Fixes: #128

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -106,7 +106,7 @@ scrolledwindow undershoot.top {
   transition-timing-function: ease;
 }
 
-.main-window .unfolded .darken {
+.darken {
   background-color: rgba(0, 0, 0, 0.08);
 }
 
