Add focus and key navigation to WaveformView
We use the arrow keys to update the cursor position in the waveform
if it has focus.

--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -16,6 +16,7 @@
             <object class="AmberolWaveformView" id="waveform_view">
               <property name="halign">center</property>
               <property name="valign">center</property>
+              <property name="can-focus">true</property>
             </object>
           </child>
           <child>
