--- a/src/gtk/help-overlay.ui
+++ b/src/gtk/help-overlay.ui
@@ -11,6 +11,12 @@
             <property name="title" translatable="yes" context="shortcut window">General</property>
             <child>
               <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Toggle primary menu</property>
+                <property name="accelerator">F10</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Copy song details to the clipboard</property>
                 <property name="action-name">win.copy</property>
               </object>
