style: Adjust focus style selectors to match libadwaita
While it works fine with :focus only, better to match it just in case.

--- a/src/gtk/style-hc.css
+++ b/src/gtk/style-hc.css
@@ -1,4 +1,4 @@
-.main-window button:focus,
-.main-window row:focus {
+.main-window button:focus:focus-visible,
+.main-window row:focus:focus-visible {
   outline-color: alpha(currentColor, .5);
 }
