--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -115,7 +115,7 @@ scrolledwindow undershoot.top {
 }
 
 
-.main-window button:focus,
-.main-window row:focus {
+.main-window button:focus:focus-visible,
+.main-window row:focus:focus-visible {
   outline-color: alpha(currentColor, .25);
 }
