style: Add GtkScale styles for .main-window
Remove blue from there too so it doesn't clash with colored bg.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -116,6 +116,16 @@ scrolledwindow undershoot.top {
 
 
 .main-window button:focus:focus-visible,
-.main-window row:focus:focus-visible {
+.main-window row:focus:focus-visible,
+.main-window scale:focus:focus-visible > trough {
   outline-color: alpha(currentColor, .25);
+}
+
+.main-window scale highlight {
+  background: currentColor;
+  color: inherit;
+}
+
+.main-window scale slider {
+  background-color: white;
 }
