style: Adjust GtkProgressBar style as well
There's one when loading files.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -121,7 +121,8 @@ scrolledwindow undershoot.top {
   outline-color: alpha(currentColor, .25);
 }
 
-.main-window scale highlight {
+.main-window scale highlight,
+.main-window progressbar progress {
   background: currentColor;
   color: inherit;
 }
