--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -53,7 +53,7 @@
                                         <property name="homogeneous">true</property>
                                         <property name="spacing">12</property>
                                         <child>
-                                          <object class="GtkButton">
+                                          <object class="GtkButton" id="add_folder_button">
                                             <property name="label" translatable="yes">Add Folder</property>
                                             <property name="action-name">queue.add-folder</property>
                                             <style>
