--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -23,12 +23,11 @@ songdetails label.song-title {
   padding-right: 12px;
 }
 
-picture.cover {
-  min-width: 192px;
-  min-height: 192px;
-  box-shadow: 0px 1px 4px rgba(0,0,0,0.5),
-              0px 2px 8px rgba(0,0,0,0.3);
-  border-radius: 6px;
+songdetails picture.cover {
+  box-shadow: 0px 1px 6px rgba(0,0,0,0.3),
+              0px 2px 12px rgba(0,0,0,0.15),
+              0px 6px 32px rgba(0,0,0,0.1);
+  border-radius: 12px;
   margin: 6px;
 }
 
