Tweak cover art style in the playlist pane
Increase the border radius.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -67,10 +67,8 @@ queuerow label.song-artist {
 }
 
 queuerow picture.cover {
-  min-width: 48px;
-  min-height: 48px;
-  box-shadow: initial;
-  border-radius: 2px;
+  box-shadow: none;
+  border-radius: 4px;
   margin: 0px;
 }
 
