--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -23,7 +23,8 @@ songdetails label.song-title {
   padding-right: 12px;
 }
 
-songdetails picture.cover {
+songdetails picture.cover,
+songdetails image.card {
   box-shadow: 0px 1px 6px rgba(0,0,0,0.3),
               0px 2px 12px rgba(0,0,0,0.15),
               0px 6px 32px rgba(0,0,0,0.1);
@@ -58,7 +59,8 @@ queuerow label.song-artist {
   font-size: 85%;
 }
 
-queuerow picture.cover {
+queuerow picture.cover,
+queuerow image.card {
   box-shadow: none;
   border-radius: 4px;
   margin: 0px;
