Use an indicator icon for the currently playing song
We put an icon at the end of the row to indicate that the song is
currently playing.

--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -72,6 +72,15 @@
                     </child>
                   </object>
                 </child>
+                <child type="end">
+                  <object class="GtkImage" id="song_playing_image">
+                    <property name="icon-name">audio-only-symbolic</property>
+                    <property name="pixel-size">16</property>
+                    <property name="halign">center</property>
+                    <property name="valign">center</property>
+                    <property name="visible">false</property>
+                  </object>
+                </child>
                 <style>
                   <class name="song-details"/>
                 </style>
