--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -23,6 +23,12 @@ songdetails label.song-title {
   padding-right: 12px;
 }
 
+songdetails label.song-title,
+songdetails label.song-artist,
+songdetails label.song-album {
+  min-height: 1.5em;
+}
+
 songdetails picture.cover,
 songdetails image.card {
   box-shadow: 0px 1px 6px rgba(0,0,0,0.3),
