--- a/src/gtk/playlist-view.ui
+++ b/src/gtk/playlist-view.ui
@@ -41,6 +41,18 @@
                 <property name="halign">end</property>
                 <property name="spacing">6</property>
                 <child>
+                  <object class="GtkToggleButton" id="search_button">
+                    <property name="icon-name">system-search-symbolic</property>
+                    <property name="action-name">queue.search</property>
+                    <property name="halign">center</property>
+                    <property name="valign">center</property>
+                    <property name="tooltip-text" translatable="yes">Search songs in the playlist</property>
+                    <style>
+                      <class name="flat"/>
+                    </style>
+                  </object>
+                </child>
+                <child>
                   <object class="GtkToggleButton" id="select_button">
                     <property name="icon-name">selection-mode-symbolic</property>
                     <property name="action-name">queue.select</property>
@@ -67,6 +79,15 @@
                 </child>
               </object>
             </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkSearchBar" id="playlist_searchbar">
+            <property name="child">
+              <object class="GtkSearchEntry" id="playlist_searchentry">
+
+              </object>
+            </property>
           </object>
         </child>
         <child>
