--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -118,6 +118,15 @@ scrolledwindow undershoot.top {
   outline-color: alpha(currentColor, .25);
 }
 
+.main-window searchbar {
+  background: transparent;
+}
+
+.main-window searchbar revealer box {
+  box-shadow: inset 0 1px @borders;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
 .main-window scale highlight,
 .main-window progressbar progress {
   background: currentColor;
