--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -78,7 +78,7 @@
                     <property name="pixel-size">16</property>
                     <property name="halign">center</property>
                     <property name="valign">center</property>
-                    <property name="visible">false</property>
+                    <property name="opacity">0</property>
                   </object>
                 </child>
                 <style>
