--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -222,6 +222,10 @@
         <attribute name="label" translatable="yes">_About Amberol</attribute>
         <attribute name="action">app.about</attribute>
       </item>
+      <item>
+        <attribute name="label" translatable="yes">_Quit</attribute>
+        <attribute name="action">app.quit</attribute>
+      </item>
     </section>
   </menu>
 </interface>
