--- a/src/gtk/playlist-view.ui
+++ b/src/gtk/playlist-view.ui
@@ -107,13 +107,13 @@
                 <property name="hscrollbar-policy">never</property>
                 <property name="vscrollbar-policy">automatic</property>
                 <property name="propagate-natural-height">true</property>
-                <property name="min-content-width">300</property>
-                <property name="max-content-width">400</property>
+                <property name="max-content-width">360</property>
+                <property name="width-request">360</property>
                 <property name="vexpand">true</property>
                 <property name="child">
                   <object class="GtkListView" id="queue_view">
                     <property name="single-click-activate">true</property>
-                    <property name="hexpand">false</property>
+                    <!--<property name="hexpand">false</property>-->
                     <style>
                       <class name="navigation-sidebar"/>
                     </style>
