--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -169,7 +169,7 @@
                   <property name="primary">true</property>
                   <property name="halign">end</property>
                   <property name="valign">center</property>
-                  <property name="tooltip-text" translatable="yes">Show main menu</property>
+                  <property name="tooltip-text" translatable="yes">Main Menu</property>
                   <style>
                     <class name="circular"/>
                   </style>
