Adds a shortcut to toggle playlist shuffle
Binds `Ctrl-R` to `queue.shuffle`, which was already setup as an event
anyway
Adds the binding to the help menu

--- a/src/gtk/help-overlay.ui
+++ b/src/gtk/help-overlay.ui
@@ -62,6 +62,12 @@
                 <property name="action-name">queue.toggle</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Toggle shuffling songs</property>
+                <property name="action-name">queue.shuffle</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
