css: Recolor the folded playlist background
We can keep the recolored background without bleed through.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -111,6 +111,15 @@ scrolledwindow undershoot.top {
   background: @window_bg_color;
 }
 
+.main-window .folded playlistview {
+  background: linear-gradient(127deg, alpha(@background_color_0, .55), alpha(@background_color_0, 0) 70.71%),
+              linear-gradient(217deg, alpha(@background_color_1, .55), alpha(@background_color_1, 0) 70.71%),
+              linear-gradient(336deg, alpha(@background_color_2, .55), alpha(@background_color_2, 0) 70.71%),
+              @window_bg_color;
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: ease;
+}
 
 .main-window button:focus:focus-visible,
 .main-window row:focus:focus-visible,
