--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -170,6 +170,7 @@
                   <property name="halign">end</property>
                   <property name="valign">center</property>
                   <property name="tooltip-text" translatable="yes">Main Menu</property>
+                  <property name="direction">up</property>
                   <style>
                     <class name="circular"/>
                   </style>
