--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -132,7 +132,7 @@ scrolledwindow undershoot.top {
   background: transparent;
 }
 
-.main-window searchbar revealer box {
+.main-window searchbar > revealer > box {
   box-shadow: inset 0 1px @borders;
   background-color: rgba(0, 0, 0, 0.05);
 }
