--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -65,7 +65,7 @@
                                         </child>
                                         <child>
                                           <object class="GtkButton">
-                                            <property name="label" translatable="yes">Add File</property>
+                                            <property name="label" translatable="yes">Add Song</property>
                                             <property name="action-name">queue.add-song</property>
                                             <style>
                                               <class name="pill"/>
