Allow restoring the last playlist
Store the playlist into a cache file whenever we load new songs, and
allow restoring the playlist from the initial landing pange.

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -54,11 +54,20 @@
                                         <property name="homogeneous">true</property>
                                         <property name="spacing">12</property>
                                         <child>
+                                          <object class="GtkButton" id="restore_playlist_button">
+                                            <property name="label" translatable="yes">Restore Playlist</property>
+                                            <property name="action-name">queue.restore-playlist</property>
+                                            <style>
+                                              <class name="suggested-action"/>
+                                              <class name="pill"/>
+                                            </style>
+                                          </object>
+                                        </child>
+                                        <child>
                                           <object class="GtkButton" id="add_folder_button">
                                             <property name="label" translatable="yes">Add Folder</property>
                                             <property name="action-name">queue.add-folder</property>
                                             <style>
-                                              <class name="suggested-action"/>
                                               <class name="pill"/>
                                             </style>
                                           </object>
