--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -7,6 +7,7 @@
     <object class="GtkBox" id="center_box">
       <property name="orientation">vertical</property>
       <property name="spacing">6</property>
+      <property name="width-request">256</property>
       <child>
         <object class="GtkBox">
           <property name="orientation">vertical</property>
