Change the ReplayGain menu translatable context
Add a context for the translatable strings in the ReplayGain menu items.

Rename the "Off" item to "Disabled", to make it clearer to translators.

Fixes: #281

--- a/src/gtk/playback-control.ui
+++ b/src/gtk/playback-control.ui
@@ -228,17 +228,17 @@
       <submenu>
         <attribute name="label" translatable="yes">_ReplayGain</attribute>
         <item>
-          <attribute name="label" translatable="yes">_Album</attribute>
+          <attribute name="label" translatable="yes" context="replaygain-menu">_Album</attribute>
           <attribute name="action">win.replaygain</attribute>
           <attribute name="target">album</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">_Track</attribute>
+          <attribute name="label" translatable="yes" context="replaygain-menu">_Track</attribute>
           <attribute name="action">win.replaygain</attribute>
           <attribute name="target">track</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">_Off</attribute>
+          <attribute name="label" translatable="yes" context="replaygain-menu">_Disabled</attribute>
           <attribute name="action">win.replaygain</attribute>
           <attribute name="target">off</attribute>
         </item>
