--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -151,3 +151,11 @@ actionbar.flat > revealer > box {
   background: none;
   box-shadow: inset 0 1px @borders;
 }
+
+volume > scale { color: @dimmed_color; }
+
+volume:hover > scale { color: inherit; }
+
+volume > scale trough highlight { min-height: 12px; min-width: 12px; }
+
+volume > scale trough slider { opacity: 0; }
