ui: Split cover widget from song details
We are going to re-organise the UI, and we need the large song cover to
be its own composite widget that lives outside the song details.

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -126,6 +126,11 @@
                                       <class name="main-box"/>
                                     </style>
 
+                                    <!-- Song cover -->
+                                    <child>
+                                      <object class="AmberolSongCover" id="song_cover"/>
+                                    </child>
+
                                     <!-- Song details -->
                                     <child>
                                       <object class="AmberolSongDetails" id="song_details"/>
